[workspace]
members = ["ssh-transport"]

[package]
name = "fakessh"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
ssh-transport = { path = "./ssh-transport" }

tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
