[package]
name = "ssh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10.1"
crypto-bigint = "0.5.5"
ed25519-dalek = { version = "2.1.1" }
eyre = "0.6.12"
rand = "0.8.5"
rand_core = "0.6.4"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
x25519-dalek = "2.0.1"

[dev-dependencies]
hex-literal = "0.4.1"
