[package]
name = "ssh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20 = "0.9.1"
ed25519-dalek = { version = "2.1.1" }
eyre = "0.6.12"
poly1305 = "0.8.0"
rand = "0.8.5"
rand_core = "0.6.4"
sha2 = "0.10.8"
subtle = "2.6.1"
tracing = "0.1.40"
x25519-dalek = "2.0.1"

[dev-dependencies]
hex-literal = "0.4.1"
