[package]
name = "cluelessh-agent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
cluelessh-transport = { path = "../cluelessh-transport" }
tokio = { version = "1.39.3", features = ["net"] }
tracing.workspace = true
cluelessh-format = { version = "0.1.0", path = "../cluelessh-format" }

[lints]
workspace = true
