[package]
name = "cluelessh-connection"
version = "0.1.0"
edition = "2021"

[dependencies]
cluelessh-format = { version = "0.1.0", path = "../cluelessh-format" }
cluelessh-transport = { path = "../cluelessh-transport" }
tracing.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
