[package]
name = "cluelessh-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bcrypt-pbkdf = "0.10.0"
ctr = "0.9.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
pem = "3.0.4"
rand = "0.8.5"
cluelessh-transport = { path = "../cluelessh-transport" }

[lints]
workspace = true
