[package]
name = "cluelessh-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
cluelessh-format = { path = "../cluelessh-format" }
aes = "0.8.4"
aes-gcm = "0.10.3"
chacha20 = "0.9.1"
crypto-bigint = "0.5.5"
ctr = "0.9.2"
ed25519-dalek = "2.1.1"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa"] }
poly1305 = "0.8.0"
rand_core = "0.6.4"
sha2 = "0.10.8"
subtle = "2.6.1"
x25519-dalek = "2.0.1"

tracing.workspace = true
base64 = "0.22.1"

[dev-dependencies]
hex-literal = "0.4.1"

[lints]
workspace = true
