[package]
name = "ssh-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
ssh-transport = { path = "../ssh-transport" }
ssh-connection = { path = "../ssh-connection" }
ssh-protocol = { path = "../ssh-protocol" }
tokio = { version = "1.39.3", features = ["net"] }
tracing.workspace = true
futures = "0.3.30"
